--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,14 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
     "history": "^5.0.0",
+    "https-browserify": "^1.0.0",
     "jquery": "^3.6.0",
+    "module": "^1.2.5",
     "node-sass": "^5.0.0",
+    "os-browserify": "^0.3.0",
     "perfect-scrollbar": "^1.5.0",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
@@ -21,13 +26,14 @@
     "react-scripts": "^4.0.3",
     "reactstrap": "^8.9.0",
     "solc": "^0.8.3",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.1.1",
     "web-vitals": "^1.0.1",
-    "web3": "^1.3.4",
-    "worker-loader": "^3.0.8"
+    "web3": "^1.3.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "webpack serve --open --hot --mode development",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "compile-sass": "node-sass src/assets/scss/paper-dashboard.scss src/assets/css/paper-dashboard.css",
@@ -53,6 +59,24 @@
     ]
   },
   "devDependencies": {
-    "webpack-cli": "^4.6.0"
+    "@babel/core": "^7.13.14",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-stage-0": "^7.8.3",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "postcss": "^8.2.9",
+    "postcss-loader": "^5.2.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "worker-loader": "^3.0.8"
   }
 }
